<resources>
    <string name="app_name">AndroidProject</string>
    <string name="search">Search</string>
    <string name="country">Country:</string>
    <string name="countryHint">Enter a country</string>
    <string name="start_date">Start Date:</string>
    <string name="end_date">End Date:</string>
    <string name="must_enter">You have to enter a country and date!</string>
    <string name="wantToDel">Do you want to delete this?</string>
    <string name="selectedRow">The selected row is: </string>
    <string name="databaseId">The database id is:</string>

    <string name="dateHint">Enter a date (YYYY-MM-DD)</string>
    <string name="loadResults">Loading results</string>
    <string name="savedDates">Previous Queries</string>
    <string name="yourResults">Your Results:</string>
    <string name="saveResults">Save Results</string>
    <string name="results">results will show here </string>
    <string name="you_removed_toast">You removed item # </string>
    <string name="help">Help</string>
    <string name="startPage">Start Page</string>
    <string name="savedPage">Saved Results</string>
    <string name="searchPage">Search Page</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="howTo">How to use:</string>
    <string name="clickHelp">You clicked for help</string>
    <string name="searchHelp">For info on Covid cases, enter a country, start date, and end date into the respective inputs.
        Ensure that the format of the date is \'YYY-MM-DD\'.
        Once query is entered, clicking the SEARCH button will take you to the Results page.
        You can see your saved data by clicking on the PREVIOUS QUERIES button.</string>
    <string name="resultHelp">This page contains the results of your query.
        Clicking the SAVE RESULTS button will save your result and take you to the Saved Results page.</string>
    <string name="savedHelp">This page contains your saved queries.
        By clicking a saved query you will see the details of that query.
        By clicking and holding a query you will be prompted with an option to delete the query.</string>
    <string name="onSearchPage">You are on the Search Page</string>
    <string name="onSavedPage">You are on the Saved Queries Page</string>

    <string name="frag_id_message">ID = </string>
    <string name="fragment_title">Message Here</string>
    <string name="hide_button">Hide</string>

    <string name="wantToSave">Do you want to save this query?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="covid_19_app">Covid-19 App</string>
    <string name="start">Start</string>
    <string name="info">Information</string>
    <string name="clickInfo">You clicked for information</string>
    <string name="covidTitle">What is COVID-19?</string>
    <!--INFO TAKEN FROM WHO.INT-->
    <string name="covidDescription">Coronavirus disease (COVID-19) is an infectious disease caused by the SARS-CoV-2 virus.
    Most people who fall sick with COVID-19 will experience mild to moderate symptoms and recover without special treatment.
        However, some will become seriously ill and require medical attention.

The virus can spread from an infected person’s mouth or nose in small liquid particles when they cough, sneeze, speak, sing or breathe.
        These particles range from larger respiratory droplets to smaller aerosols.
You can be infected by breathing in the virus if you are near someone who has COVID-19, or by touching a contaminated surface and then your eyes, nose or mouth.
        The virus spreads more easily indoors and in crowded settings.</string>
    <string name="ok">Ok</string>
    <string name="startHelp">This application allows you to search and save Covid-19 case numbers from across the world. To get started, hit start!</string>
    <string name="resultLabel">Results</string>
    <string name="savedQueryLabel">Saved Queries</string>
    <string name="covidLabel">COVID-19 Application</string>
    <string name="searchLabel">Search</string>
    <string name="searchMenuToast">You clicked the search icon</string>
    <string name="wantToSearch">Do you want to go to the search activity?</string>
</resources>