<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SearchActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/country"/>

    <EditText
        android:id="@+id/inputCountry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/countryHint"
        android:inputType="text" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date"/>

    <EditText
        android:id="@+id/inputDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dateHint"
        android:inputType="date" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search"/>

    <Button
        android:id="@+id/savedDates"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/savedDates"/>


</LinearLayout>